# growth-decision-engine

./: .gitignore  README.md  netlify.toml  pyproject.toml  render.yaml  requirements.txt
configs/: decision_rules.yaml
docs/: 01_project_overview.md  02_architecture.md  03_decision_logic.md  04_ml_workflow.md  05_api_guide.md  06_demo_script.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: About.tsx  Architecture.tsx  DataSources.tsx  DecisionEngine.tsx  Guide.tsx  Landing.tsx
frontend/src/types/: index.ts
src/growth_decision_engine/: __init__.py
src/growth_decision_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/growth_decision_engine/api/: main.py
src/growth_decision_engine/data_pipeline/: __init__.py  generate_sample_data.py
src/growth_decision_engine/decision_engine/: __init__.py  engine.py  rules.py
src/growth_decision_engine/feature_engineering/: features.py
src/growth_decision_engine/models/: __init__.py  predict.py  train.py
tests/: test_decision_rules.py
